# DynGB

./: #Untitled-1#  #Untitled-2#  #algorithm_buchberger_dynamic.cpp#  #test_dynamic.cpp#  Doxyfile  DynCyc9h.txt  DynCyc9h_15oct2019.txt  DynCyc9h_16oct2019.txt  DynCyc9h_sequential_16oct2019.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile.original  README.md  ac_checking_gmp.m4  ac_checking_ppl.m4  algorithm_buchberger_basic.cpp  algorithm_buchberger_basic.cpp.atlas  algorithm_buchberger_basic.cpp~  algorithm_buchberger_basic.hpp  algorithm_buchberger_dynamic.cpp  algorithm_buchberger_dynamic.hpp  algorithm_buchberger_explorer.cpp  algorithm_buchberger_explorer.hpp  algorithm_buchberger_explorer_atlas.cpp  algorithm_buchberger_explorer_postcustomreduce.cpp  algorithm_buchberger_explorer_precustomreduce.cpp  algorithm_buchberger_explorer_serial.cpp  algorithm_buchberger_explorer_serial.hpp  betti.cpp  betti.hpp  bib2142.aux  callgrind.out.3371  callgrind.out.82395  citelist.doc6632  config.h  config.h.in  config.h.in~  config.status  (+157 more)
autom4te.cache/: output.0  output.1  output.2  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
cmake_out/: CMakeCache.txt
debug/: Makefile  config.h  config.status  helgrind_spinlock2.cpp  test_4by4  test_cab_es1  test_cab_es2  test_cab_es4  test_cab_es5  test_cab_es6  test_cab_es9  test_cyclicn  test_dynamic  test_f4  test_f4_dynamic  test_f4_dynamic_old  test_f4_old  test_glpk_solver  test_gmp  test_hash  test_hilbert_functions  test_incremental_betti  test_initial_analysis  test_monomials  test_sort  user_interface
dox/: bib6584.aux  citelist.doc2142
example_systems_for_user_interface/: #buch85_dyn.txt#  #s9_1_dyn.txt#  alea.txt  alea_dyn.txt  alea_f4.txt  buch85.txt  buch85_df4m.txt  buch85_df4r.txt  buch85_dyn.txt  buch85_dyn.txt~  buch85_dyn_f4.txt  buch85_f4.txt  butcher8.txt  butcher8_df4m.txt  butcher8_df4m_10ref.txt  butcher8_df4r.txt  butcher8_dyn.txt  butcher8_dyn.txt~  butcher8_dyn_f4.txt  butcher8_f4.txt  czapor87.txt  czapor87_df4m.txt  czapor87_df4r.txt  czapor87_dyn.txt  czapor87_f4.txt  eco10.txt  eco10_df4m.txt  eco10_df4r.txt  eco10_dyn.txt~  eco10_f4.txt  eco5.txt  eco5_dyn.txt  eco5h.txt  eco5h_dyn.txt  eco6.txt  eco6_dyn.txt  eco6h.txt  eco6h_dyn.txt  eco8.txt  eco8_df4m.txt  (+112 more)
f4_bad/: f4_reduction_alt.cpp  f4_reduction_alt.hpp  f4_reduction_dense.cpp  f4_reduction_dense.hpp  f4_reduction_serial.cpp  f4_reduction_serial.hpp  f4_reduction_short_rows.cpp  f4_reduction_short_rows.hpp  f4_reduction_sparse.cpp  f4_reduction_sparse.hpp  f4_reduction_sparse_list.cpp  f4_reduction_sparse_list.cpp~  f4_reduction_sparse_list.hpp  f4_reduction_sparse_map.cpp  f4_reduction_sparse_map.hpp  f4_reduction_sparse_memcpy.cpp  f4_reduction_sparse_memcpy.hpp
html/: algorithm__buchberger__basic_8hpp_source.html  algorithm__buchberger__dynamic_8hpp_source.html  algorithm__buchberger__explorer_8hpp_source.html  algorithm__buchberger__explorer__atlas_8cpp_source.html  algorithm__buchberger__explorer__serial_8cpp_source.html  annotated_dup.js  betti_8hpp_source.html  citelist.html  class_abstract___polynomial-members.html  class_abstract___polynomial.js  class_constant___polynomial-members.html  class_constant___polynomial.html  class_critical___pair___basic-members.html  class_critical___pair___basic.html  class_critical___pair___basic.js  class_critical___pair___dynamic-members.html  class_critical___pair___dynamic.js  class_critical___pair___x_plor-members.html  class_d_b___polynomial___iterator-members.html  class_d_b___polynomial___iterator.html  class_d_b___polynomial___iterator.js  class_dense___univariate___rational___polynomial-members.html  class_dense___univariate___rational___polynomial.html  class_dense___univariate___rational___polynomial.js  class_double___buffered___polynomial.js  class_g_l_p_k___solver-members.html  class_generic___grevlex-members.html  class_generic___grevlex.html  class_generic___grevlex.js  class_geobucket___iterator-members.html  class_geobucket___iterator.html  class_geobucket___iterator.js  class_grading___order___data___allocator-members.html  class_grading___order___data___allocator.html  class_grevlex___order___data.js  class_grevlex___ordering.html  class_grevlex___ordering.js  class_l_l_polynomial___iterator-members.html  class_l_l_polynomial___iterator.html  class_l_l_polynomial___iterator.js  (+194 more)
latex/: bibTmpFile_1.bib  class_abstract___polynomial.eps  class_abstract___polynomial.tex  class_builder___polynomial.tex  class_cached_w_grevlex___ordering.eps  class_cached_w_grevlex___ordering.tex  class_constant___polynomial.tex  class_constant___polynomial___iterator.eps  class_constant___polynomial___iterator.tex  class_critical___pair___dynamic.tex  class_critical___pair___x_plor.tex  class_d_b___polynomial___iterator.tex  class_dense___univariate___integer___polynomial.tex  class_dense___univariate___rational___polynomial.tex  class_double___buffered___polynomial.eps  class_f4___reduction___data.tex  class_g_l_p_k___solver.eps  class_generic___grevlex.eps  class_generic___grevlex.tex  class_geobucket___iterator.tex  class_grading___order___data___allocator.tex  (+46 more)
(+685 files in other folders)
